--- a/css/header.css
+++ b/css/header.css
@@ -5,23 +5,36 @@
 }
 html {
     scroll-behavior: smooth;
-    font-family: Roboto;
+    font-family: "Roboto";
     font-weight: 800;
     font-size: 24px;
   }
+
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
+
 .header{
-    min-height: 100vh;
+    height: 100vh;
+    min-height: 600px;
     width: 100%;
 
     position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+#header-img{
     background-image: url(../resource/image/BG.jpg);
     background-color: rgb(0, 0, 0, 0.66);
     background-blend-mode: multiply;
     background-position: center;
     background-size: cover;
-
-    overflow-x: hidden;
 }
+
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
+
 .navbar{
     z-index: 200;
     position:sticky;
@@ -73,7 +86,7 @@ html {
 }
 .navcenter{
     cursor: pointer;
-    margin-right: 80px;
+    margin-right: 70px;
 }
 .navcenter a{
     color: white;
@@ -92,6 +105,10 @@ html {
     color: black;
     border-radius: 75px;
 }
+
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
 
 .Title{
     width: 90%;
@@ -128,11 +145,16 @@ html {
 .Title svg{
     margin-top: 21px;
     width: 198px;
-    height: 8px;
+    height: 6px;
     background: linear-gradient(94.94deg, #FD9E04 -1.76%, #FF4C01 80.53%);
     border-radius: 75px;
     transition: 0.5s;
 }
+
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
+
 .commission-btn{
     cursor: pointer;
     top: 21px;
@@ -154,6 +176,10 @@ html {
     background: white;
     color:black;
 }
+
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
 
 .external-links{
     margin-top: 21px;
@@ -213,6 +239,16 @@ html {
     /* filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(-20deg) brightness(150%) contrast(100%); */
 }
 
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------*/
+/*===================================================================================================*/
+/*---------------------------------------------------------------------------------------------------*/
+
 @media(max-width: 800px){
     .navcenter{
         margin-right: 38px;
@@ -244,7 +280,7 @@ html {
         width: calc(198px / 1.2);
     }
     .commission-btn{
-        font-size: calc(21px / 1.2);
+        font-size: calc(21px / 1);
         width: calc(352px / 1.2);
         height: calc(63px / 1.2);
         line-height: calc(63px / 1.2);
