--- a/css/content.css
+++ b/css/content.css
@@ -95,7 +95,7 @@ body{
     font-size: 24px;
     font-weight: 300;
     position: relative;
-    content: "Status: Closed";
+    content: "Status: Open";
     display: inline-block;
 }
 
