Added contact, finished version 1.0 of the website

--- a/css/header.css
+++ b/css/header.css
@@ -77,7 +77,7 @@ html {
     margin-left: 10px;
 }
 .navsupport a{
-    background: linear-gradient(94.94deg, #FD9E04 -1.76%, #FF4C01 80.53%);;
+    
     border-radius: 50px;
     margin-right: 10px;
 }
@@ -178,6 +178,7 @@ html {
 .external-links img{
     width: 50px;
     height: auto;
+    transition: 0.5s;
 }
 .external-links ul li{
     position: relative;
