--- a/css/support.css
+++ b/css/support.css
@@ -1,4 +1,4 @@
-#support{
+#contact{
     text-align: center;
     margin-top: 150px;
     min-height: 100vh;
@@ -8,8 +8,97 @@
     justify-content: space-between;
 }
 
-#support .text-title p:after{
+#contact .text-title p:after{
     width: 100px;
+}
+.contact-container{
+    display: flex;
+    width: 80vw;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+.contact-left, .contact-right{
+    display: flex;
+    width: 50%;
+}
+.contact-inner-container{
+    display: block;
+    text-align: left;
+    float: left;
+    font-size: 20px;
+    width: 100%;
+}
+.contact-thin-text{
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+.email-not-sent{
+    font-size: 30px;
+    color: transparent;
+    background: transparent;
+    opacity: 0%;
+    z-index: -2000;
+    transition: 0.5s;
+
+    opacity: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: -2000;
+    position:fixed;
+    top: 0;
+    left: 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+}
+.email-sent{
+    color: white;
+    background: linear-gradient(94.94deg, #1d3036 -1.76%, #1a2530 80.53%);
+    opacity: 90%;
+    z-index: 2000;
+    transition: 0.5s;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+form input, form textarea{
+    font-size: 16px;
+    font-weight: 300;
+    resize: none;
+    color: white;
+    background: linear-gradient(94.94deg, #1d3036 -1.76%, #1a2530 80.53%);
+    border: 0;
+    margin: 10px, 0;
+    padding: 10px;
+    outline: none;
+    border-radius: 6px;
+}
+.send{
+    text-align: center;
+    margin: 50px;
+    font-style: bold;
+    font-size: 26px;
+    color: white;
+    background: linear-gradient(94.94deg, #1bb3da -1.76%, #1382cc 80.53%);
+    padding: 10px 50px;
+
+    border-radius: 75px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.send:hover{
+    color: black;
+    background: white;
+}
+.external-links-2{
+    margin-top: 0px;
 }
 .C p{
     position: relative;
@@ -44,7 +133,7 @@ footer{
 }
 
 @media(max-width: 800px){
-    #support .text-title p:after{
+    #contact .text-title p:after{
         width: 70px;
     }
     .C p{
@@ -52,5 +141,18 @@ footer{
     }
     .B p{
         font-size: 10px;
+    }
+    .contact-container{
+        display: block;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .contact-left, .contact-right{
+        margin-top: 50px;
+        width: 100%;
+        height: 100%;
+    }
+    .contact-right{
+        margin-bottom: 100px;
     }
 }
