--- a/css/contact.css
+++ b/css/contact.css
@@ -149,10 +149,24 @@ footer{
     }
     .contact-left, .contact-right{
         margin-top: 50px;
+        margin-bottom: 100px;
         width: 100%;
         height: 100%;
     }
-    .contact-right{
-        margin-bottom: 100px;
+    .contact-inner-container{
+        font-size: 14px;
     }
+    .contact-thin-text{
+        font-size: 14px;
+    }
+    .email-not-sent{
+        font-size: 20px;
+    }
+    form input, form textarea{
+        font-size: 14px;
+    }
+    .send{
+        font-size: 20px;
+    }
+
 }
